  Overflow errors to be raised.

  https://bugs.launchpad.net/zodb/+bug/143237

- There were numerous bugs in the ZEO cache tracing and analysys code.
  Cache simulation, while not perfect, seems to be much more accurate
  now than it was before.

  The ZEO cache trace statistics and simulation scripts have been
  given more descriptive names and moved to the ZEO scripts package.

3.10.0b1 (2010-05-18)
=====================

New Features
------------

- DemoStorages now accept constructor athuments, close_base_on_close
  and close_changes_on_close, to control whether underlying storages
  are closed when the DemoStorage is closed.

  https://bugs.launchpad.net/zodb/+bug/118512

- Removed the dependency on zope.proxy.

- Removed support for the _p_independent mini framework, which was
  made moot by the introduction of multi-version concurrency control
  several years ago.

- Added support for the transaction retry convenience
  (transaction-manager attempts method) introduced in the
  ``transaction`` 1.1.0 release.

- Enhanced the database opening conveniences:

  - You can now pass storage keyword arguments to ZODB.DB and
    ZODB.connection.

  - You can now pass None (rather than a storage or file name) to get
    a database with a mapping storage.

- Databases now warn when committing very large records (> 16MB).
  This is to try to warn people of likely design mistakes.  There is a
  new option (large_record_size/large-record-size) to control the
  record size at which the warning is issued.

- Added support for wrapper storages that transform pickle data.
  Applications for this include compression and encryption.  An
  example wrapper storage implementation, ZODB.tests.hexstorage, was
  included for testing.

  It is important that storage implementations not assume that
  storages contain pickles.  Renamed IStorageDB to IStorageWrapper and
  expanded it to provide methods for transforming and untransforming