@@ -33,6 +33,18 @@ Bugs fixed
   The ZEO cache trace statistics and simulation scripts have been
   given more descriptive names and moved to the ZEO scripts package.
 
+- If a ZEO client process was restarted while invalidating a ZEO cache
+  entry, the cache could be left in a stage when there is data marked
+  current that should be invalidated, leading to persistent conflict
+  errors.
+
+- Corrupted or invalid cache files prevented ZEO clients from
+  starting. Now, bad cache files are moved aside.
+
+- Invalidations of object records in ZEO caches, where the
+  invalidation transaction ids matched the cached transaction ids
+  should have been ignored.
+
 3.10.0b1 (2010-05-18)
 =====================
 
